git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "0c94ad7"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "0c94ad7"
git-subrepo:
  version:  "0.2.1"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "b136967"

--- a/perl6/doc/lib/Language/classtut.pod
+++ b/perl6/doc/lib/Language/classtut.pod
@@ -166,6 +166,17 @@ X<|traits, is rw>
 The C<is rw> trait causes the generated accessor method to return something
 external code can modify to change the value of the attribute.
 
+You can also supply default values to attributes (which works equally for
+those with and without accessors):
+
+    has Bool $.done = False;
+
+The assignment is carried out at object build time. The right-hand side is
+evaluated at that time, and can even reference earlier attributes:
+
+    has Task @!dependencies;
+    has $.ready = not @!dependencies;
+
 =head1 Static fields?
 
 Perl 6 has no B<static> keyword. Nevertheless any class may declare anything
@@ -303,6 +314,22 @@ the private attributes (C<&!callback> and C<&!dependencies>) are being used
 as the bind targets for C<BUILD>'s parameters. Zero-boilerplate
 initialization! See L<objects|/language/objects#Object Construction> for
 more information.
+
+The C<BUILD> method is responsible for initialilzing all attributes, it must
+handle default values too:
+
+    has &!callback;
+    has @!dependencies;
+    has Bool ($.done, $.ready);
+    submethod BUILD(
+            :@!callback,
+            :@!dependencies,
+            :$!done = False,
+            :$!ready = not @!dependencies
+        ) { }
+
+See L<Object Construction|/language/objects#Object Construction> for more
+options to influence object construction and attribute initializtion.
 
 =head1 Consuming our class
 
