--- a/perl6/doc/lib/Language/operators.pod
+++ b/perl6/doc/lib/Language/operators.pod
@@ -265,9 +265,9 @@ In most cases, a dot may be placed before a postfix or postcircumfix:
     @a.[1, 2, 3]; # Same
 
 This can be useful for visual clarity or brevity. For example, if an object's
-attribute is a function, putting a pair of paretheses after the attribute name
-will become part of the method call. So either two pairs of paretheses must be
-used, or a dot has to come before the parentheses to seperate it from the method
+attribute is a function, putting a pair of parentheses after the attribute name
+will become part of the method call. So either two pairs of parentheses must be
+used, or a dot has to come before the parentheses to separate it from the method
 call.
 
     class Operation {
