--- a/perl6/doc/lib/Type/Buf.pod
+++ b/perl6/doc/lib/Type/Buf.pod
@@ -4,7 +4,7 @@
 
 =SUBTITLE Mutable buffer for binary data
 
-    rule Buf[::T] does Blob[T] { ... }
+    role Buf[::T] does Blob[T] { ... }
 
 A C<Buf> is a mutable sequence of (usually unsigned) integers.
 
