--- a/perl6/doc/lib/Type/Failure.pod
+++ b/perl6/doc/lib/Type/Failure.pod
@@ -32,7 +32,7 @@ Returns C<True> for handled failures, C<False> otherwise.
 
 =head2 method exception
 
-    method handled(Failure:D:) returns Exception
+    method exception(Failure:D:) returns Exception
 
 Returns the L<Exception> object that the failure wraps.
 
