--- a/perl6/doc/lib/Type/IO/Socket/INET.pod
+++ b/perl6/doc/lib/Type/IO/Socket/INET.pod
@@ -86,6 +86,6 @@ Returns a lazy list of lines read from the socket.
 
     method accept()
 
-In listen/server mode, waits for a new incomming connection, and returns it.
+In listen/server mode, waits for a new incoming connection, and returns it.
 
 =end pod
