--- a/perl6/doc/lib/Type/Int.pod
+++ b/perl6/doc/lib/Type/Int.pod
@@ -77,6 +77,14 @@ number.
     say 0b01010.msb;        # 3
     say 0b10011.msb;        # 4
 
+=head2 routine unival
+
+    multi sub    unival(Int:D)  returns Numeric
+    multi method unival(Int:D:) returns Numeric
+
+Returns the number reprsented by the Unicode codepoint with the given integer
+number, or L<NaN> if it does not represent a number.
+
 =head1 Operators
 
 =head2 infix div
