--- a/perl6/doc/lib/Type/Match.pod
+++ b/perl6/doc/lib/Type/Match.pod
@@ -80,4 +80,8 @@ Returns the part of the original string following the match.
 
 Sets the AST to C<$ast>, and returns it.
 
+This is just a little sugar for C<$/.made = $ast> which is a very common
+operation in actions. C<$ast> may be anything that makes sense for the
+use case. It's typically some tree node.
+
 =end pod
