--- a/perl6/doc/lib/Type/Metamodel/RoleContainer.pod
+++ b/perl6/doc/lib/Type/Metamodel/RoleContainer.pod
@@ -26,7 +26,7 @@ Adds the C<$role> to the list of roles to be composed.
 
 =head2 method roles_to_compose
 
-    method add_role(Metamodel::RoleContainer:D: $obj) returns List:D
+    method roles_to_compose(Metamodel::RoleContainer:D: $obj) returns List:D
 
 returns a list of roles added with C<add_role>, which are to be composed
 at type composition time.
