--- a/perl6/doc/lib/Type/Mu.pod
+++ b/perl6/doc/lib/Type/Mu.pod
@@ -242,4 +242,55 @@ Marks a type as being exported, that is, available to external users.
 A user of a module or class automatically gets all the symbols imported that
 are marked as C<is export>.
 
+=head2 method take
+
+    method take()
+
+Takes the given item and passes it to the enclosing C<gather> block.
+
+    #| randomly select numbers for lotto
+    my $num-selected-numbers = 6;
+    my $max-lotto-numbers = 49;
+    gather for ^$num-selected-numbers {
+        take (1 .. $max-lotto-numbers).pick(1);
+    }.say;    #-> 32 22 1 17 32 9  (for example)
+
+=head2 method so
+
+    method so()
+
+Returns a C<Bool> value representing the logical non-negation of an
+expression.  One can use this method similarly to the English sentence: "If
+that is B<so>, then do this thing".  For instance,
+
+    my @args = <-a -e -b -v>;
+    my $verbose-selected = any(@args) eq '-v' | '-V';
+    if $verbose-selected.so {
+        say "Verbose option detected in arguments";
+    } #-> Verbose option detected in arguments
+
+=head2 method not
+
+    method not()
+
+Returns a C<Bool> value representing the logical negation of an expression.
+Thus it is the opposite of C<so>.
+
+    my @args = <-a -e -b>;
+    my $verbose-selected = any(@args) eq '-v' | '-V';
+    if $verbose-selected.not {
+        say "Verbose option not present in arguments";
+    } #-> Verbose option not present in arguments
+
+Since there is also a prefix version of C<not>, the above code reads better
+like so:
+
+    my @args = <-a -e -b>;
+    my $verbose-selected = any(@args) eq '-v' | '-V';
+    if not $verbose-selected {
+        say "Verbose option not present in arguments";
+    } #-> Verbose option not present in arguments
+
 =end pod
+
+# vim: expandtab shiftwidth=4 ft=perl6
