--- a/perl6/doc/lib/Type/Proc/Async.pod
+++ b/perl6/doc/lib/Type/Proc/Async.pod
@@ -202,7 +202,7 @@ L<X::Proc::Async::MustBeStarted> exception is thrown.
     method close-stdin(Proc::Async:D:)
 
 Closes the standard input stream of the external program. Programs that read
-from STDIN often only terminate when their input straem is closed. so if
+from STDIN often only terminate when their input stream is closed. So if
 waiting for the promise from C<#method start> hangs (for a program opened for
 writing), it might be a forgotten C<close-stdin>.
 
@@ -217,7 +217,7 @@ L<X::Proc::Async::MustBeStarted> exception is thrown.
 
     kill(Proc::Async:D: $signal = "HUP")
 
-Sends a signal to the running program. The signal cann be a signal name
+Sends a signal to the running program. The signal can be a signal name
 ("KILL" or "SIGKILL"), an integer (9) or an element of the C<Signal> enum
 (Signal::SIGKILL).
 
