--- a/perl6/doc/lib/Type/Str.pod
+++ b/perl6/doc/lib/Type/Str.pod
@@ -99,6 +99,26 @@ Perl 6 does not have a C<lcfirst> function.
 
 Perl 6 does not have a C<ucfirst> function.  See L<tc>.
 
+=head2 method unival
+
+    multi method unival(Str:D) returns Numeric
+
+Returns the numeric value that the first codepoint in the invocant represents,
+or C<NaN> if it's not numeric.
+
+    say '4'.unival;     # 4
+    say '¾'.unival;     # 0.75
+    say 'a'.unival;     # NaN
+
+=head2 method univals
+
+    multi method univals(Str:D) returns List
+
+Returns a list of numeric values represented by each codepoint in the invocant
+string, and C<NaN> for non-numeric characters.
+
+    say '4a¾".univals;  # 4 NaN 0.75
+
 =head2 method length
 
 Perl 6 does not have a C<length> function.  See L<chars> or L<elems>.
