--- a/perl6/doc/lib/Type/X/IO/Unlink.pod
+++ b/perl6/doc/lib/Type/X/IO/Unlink.pod
@@ -8,7 +8,7 @@
 
 Error class for failed L<&unlink> operation.
 
-A typica error message is
+A typical error message is
 
     Failed to remove the file 'secret': Permission defined
 
