--- a/perl6/doc/lib/Language/nativecall.pod
+++ b/perl6/doc/lib/Language/nativecall.pod
@@ -85,6 +85,16 @@ routine itself.
 Note that a null string can be passed by passing the Str type object; a null
 return will also be represented by the type object.
 
+For string arguments that are specified as C<const char *> it is necessary
+to tell Perl not to free the memory allocated to the C string after the
+function returns using C<explicity-manage> :
+
+    # C prototype is set_foo(const char * foo)
+	sub set_foo(Str) is native('libfoo') { * }
+    my $string = "FOO";
+    explicitly-manage($string);
+    set_foo($string);
+    
 =head1 Basic use of Pointers
 
 Sometimes you need to get a pointer (for example, a library handle) back from a
@@ -103,7 +113,7 @@ by writing a class like this:
         # Here are the actual NativeCall functions.
         sub Foo_init() returns FooHandle is native("libfoo") { * }
         sub Foo_free(FooHandle) is native("libfoo") { * }
-        
+
         # Here are the methods we use to expose it to the outside world.
         method new() { Foo_init() }
         method free() { Foo_free(self) }
