--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -72,6 +72,14 @@ what type they coerce to:
     ord             Str
     chars           Str
     fmt             Str
+    uniname         Str
+    unival          Str
+    univals         Str
+    uniprop         Str
+    uniprop-int     Str
+    uniprop-str     Str
+    uniprop-bool    Str
+    unimatch        Str
     uc              Str
     lc              Str
     capitalize      Str
@@ -203,7 +211,7 @@ radians.
 =head2 routine tan
 
     method tan()
-    sub acos(Numeric(Cool))
+    sub tan(Numeric(Cool))
 
 Coerces the invocant (or in sub form, the argument) to L<Numeric|/type/Numeric>, interprets it as radians,
 returns its L<tangens|https://en.wikipedia.org/wiki/Tangent>.
@@ -266,7 +274,7 @@ radians.
 =head2 routine cotan
 
     method cotan()
-    sub cotangens(Numeric(Cool))
+    sub cotan(Numeric(Cool))
 
 Coerces the invocant (or in sub form, its argument) to L<Numeric|/type/Numeric>, interprets it as radians,
 returns its L<cotangens|https://en.wikipedia.org/wiki/Trigonometric_functions#Reciprocal_functions>,
@@ -570,6 +578,14 @@ With a customer filter too:
 
     say "have fun working on perl".wordcase(:filter(&uc), :where({ .chars > 3 }));
                                             # HAVE fun WORKING on PERL
+
+=head2 routine uniname
+
+    method uniname() returns Str
+    sub uniname(Str(Cool) returns Str
+
+Interprets the invocant / first argument as a L</type/Str>, and returns the
+Unicode codepoint name of the first character.
 
 =head2 routine chop
 
