--- a/perl6/doc/lib/Type/List.pod
+++ b/perl6/doc/lib/Type/List.pod
@@ -101,7 +101,11 @@ C<$separator> and concatenates everything into a single string.
 
 Example:
 
-    join ', ', <a b c>;     # 'a, b, c'
+    join ', ', <a b c>;             # a, b, c
+
+Note that the method form does not flatten sublists:
+
+    say (1, <a b c>).join('|');     # 1|a b c
 
 =head2 routine map
 
@@ -140,7 +144,7 @@ Examples:
     multi method grep-index(List:D: Mu $matcher) returns List:D
 
 Returns a lazy list of indices against which the associated elements
-smart-match.  The indicies are returned in order.
+smart-match.  The indices are returned in order.
 
 =head2 routine first
 
@@ -185,9 +189,9 @@ of the associated key.
 Example:
 
     say classify { $_ %% 2 ?? 'even' !! 'odd' }, (1, 7, 6, 3, 2);
-                # ("odd" => [1, 7, 3], "even" => [6, 2]).hash;;
-    say ('hello', 1, 22/7, 42, 'world').classify: { .Str.chars }
-                # ("5" => ["hello", "world"], "1" => [1], "8" => [22/7], "2" => [42]).hash
+        #-> even => 6 2, odd => 1 7 3
+    say ('hello', 1, 22/7, 42, 'world').classify: { .Str.chars };
+        #-> 1 => 1, 2 => 42, 5 => hello world, 8 => 3.142857
 
 =head2 method Bool
 
@@ -536,6 +540,56 @@ prints
     2 3 1
     3 1 2
     3 2 1
+
+=head2 method rotor
+
+    method rotor(*@cycle, Bool() :$partial)
+
+Returns a list of lists, where each sublist is made up of elements of the
+invocant.
+
+In the simplest case, C<@cycle> contains just one integer, in which case the
+invocant list is split into sublists with as many elements as the integer
+specifies. If C<:$partial> is True, the final chunk is included even if it
+doesn't satisfy the length requirement:
+
+    say ('a'..'h').rotor(3).join('|');              # a b c|d e f
+    say ('a'..'h').rotor(3, :partial).join('|');    # a b c|d e f|g h
+
+If the element of C<@cycle> is a L</type/Pair|Pair> instead, the key of the
+pair specifies the length of the return sublist, and the value the gap between
+sublists; negative gaps produce overlap:
+
+    say ('a'..'h').rotor(2 => 1).join('|');         # a b|d e|g h
+    say ('a'..'h').rotor(3 => -1).join('|');        # a b c|c d e|e f g
+
+If C<@cycle> contains more than element, C<rotor> cycles through it to find
+the number of elements for each sublist:
+
+    say ('a'..'h').rotor(2, 3).join('|');           # a b|c d e|f g
+    say ('a'..'h').rotor(1 => 1, 3).join('|');      # a|c d e|f
+
+Combining multiple cycles and C<:partial> also works:
+
+    say ('a'..'h').rotor(1 => 1, 3 => -1, :partial).join('|');
+                                                    # a|c d e|e|g h
+
+Note that assigning the list of lists returned from C<rotor> to a variable
+will flatten to an C<Array>:
+
+    my @maybe_lol = ('a'..'h').rotor(2 => 1);
+    @maybe_lol.perl.say;   #-> ["a", "b", "d", "e", "g", "h"]<>
+
+Which probably isn't what one wanted, since the C<rotor>-ed output looks
+like this:
+
+    say ('a'..'h').rotor(2 => 1).perl; #-> (("a", "b"), ("d", "e"), ("g", "h"))
+
+To force a C<List> of C<List>s to be returned, I<bind> the output instead of
+assigning it:
+
+    my @really_lol := ('a'..'h').rotor(2 => 1);
+    @really_lol.perl.say;   #-> (("a", "b"), ("d", "e"), ("g", "h"))
 
 =head2 routine zip
 
